--- a/style.css
+++ b/style.css
@@ -4,109 +4,114 @@ body {
     font-family: Arial, sans-serif;
     background-color: #000;
     overflow: hidden;
-}
-
-.container {
+  }
+  
+  .container {
     position: relative;
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
-}
-
-nav {
+  }
+  
+  nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.5);
     color: #fff;
-    z-index: 10;
-}
-
-.logo {
+    z-index: 10; 
+  }
+  
+  .logo {
     font-size: 24px;
     font-weight: bold;
     margin-left: 40px;
     margin-top: 10px;
-}
-
-.nav-links {
+  }
+  
+  .nav-links {
     list-style: none;
     display: flex;
     gap: 20px;
-}
-
-.nav-links a {
+  }
+  
+  .nav-links a {
     color: #fff;
     text-decoration: none;
-}
-
-main {
+  }
+  
+  main {
     display: flex;
-    justify-content: flex-start;
-    width: 100%;
-}
-
-.content {
+      justify-content: flex-start;
+      width: 100%;
+  }
+  
+  .content {
     color: #fff;
     text-align: left;
-    z-index: 10;
-    flex: 0 0 50%;
-    padding: 20px;
-    box-sizing: border-box;
-    margin-left: 71px;
-    height: 0;
-    overflow: hidden;
-    transition: all 2s ease;
-}
-
-.content h1 {
-    font-size: 35px;
+    z-index: 10; 
+    flex: 0 0 50%; 
+    padding: 20px; 
+    box-sizing: border-box; /
+  }
+  
+  .content h1 {
+    font-size: 66px;
     margin-bottom: 20px;
-}
 
-.content h3 {
+  }
+  
+  .content h3 {
     font-size: 28px;
     margin-bottom: 20px;
+    
     margin-top: 50px;
     color: rgb(165, 163, 163);
-}
-
-.content .highlight {
+  }
+  
+  .content .highlight {
     color: #ffd700;
-}
-
-.buttons {
+  }
+  
+  .buttons {
     display: flex;
     justify-content: center;
     gap: 20px;
     margin-top: 50px;
-}
-
-.btn {
+  }
+  
+  .btn {
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none;
     border-radius: 5px;
     font-size: 12px;
-}
-
-.btn-primary {
+  }
+  
+  .btn-primary {
     background-color: #ffffff;
     color: #000;
-}
-
-.btn-secondary {
+  }
+  
+  .btn-secondary {
     background-color: rgba(255, 255, 255, 0.2);
     color: #fff;
-}
-
-#model-container {
-    position: absolute;
+  }
+  
+  #stars-container, #coin-container {
+    position: absolute; 
     top: 0;
-    left: 0;
-    width: 100%;
     height: 100%;
     z-index: 1;
-}
+  }
+  
+  #stars-container {
+    width: 100%;
+  }
+  
+  #coin-container {
+    left: 50%;
+    width: 50%; /* Coin occupies the right half */
+  }
